# AlbionManagerBot

./: Cargo.toml  README.md  test.js
src/: .env  main.rs
src/commands/: mod.rs
src/commands/admin/: mod.rs  user_id.rs
src/commands/albion/: mod.rs  staistics.rs
src/commands/misc/: ping.rs
src/modules/: configuration.rs  mod.rs  users.rs
