[package]
name = "Discord_Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.188"
futures = "0.3.28"
tap = "1.0.1"
ureq = "2.2.0"
serde_json = "1.0"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]